# ai-code-reviewer

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: quickstart.md
src/ai_code_reviewer/: __init__.py  analyzer.py  cli.py  config.py  git_analyzer.py  parser.py  reporter.py  reviewer.py
src/ai_code_reviewer/templates/: report.html
