[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-code-reviewer"
version = "0.1.0"
description = "智能代码审查助手 —— 让 AI 成为你的代码审查伙伴"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "AI Code Reviewer Team" },
]
keywords = [
    "code-review",
    "ai",
    "llm",
    "github",
    "automation",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.24",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
ai-review = "ai_code_reviewer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ai-code-reviewer"
Documentation = "https://github.com/yourusername/ai-code-reviewer#readme"
Repository = "https://github.com/yourusername/ai-code-reviewer"
Issues = "https://github.com/yourusername/ai-code-reviewer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_code_reviewer"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
